Big delay between commits here, sorry. There were multiple issues with trying to structure a one-to-many relationship between tables, as well as setting up the files for the chatbot. These kinks have been worked out. Database tables built, routes work, data has been stored for test users for my proof-of-concept. Users can be created, chatbot will be loaded upon request, response is slightly kinked at this time, but working it out. Nearly complete. Will be more thorough with my push's from this point.

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 gunicorn = "*"
 marshmallow-sqlalchemy = "*"
+psycopg2 = "*"
+environs = "*"
+chatterbot = "*"
 
 [requires]
 python_version = "3.8"
