--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ marshmallow-sqlalchemy = "*"
 psycopg2 = "*"
 environs = "*"
 chatterbot = "==1.0.1"
+pytz = "*"
 
 [requires]
 python_version = "3.8"
