Modified YML file further

--- a/data/data.yml
+++ b/data/data.yml
@@ -4,9 +4,11 @@ conversations:
   - - Hi Nutribot! How are you today?
     - I'm well thank you, I hope you are too. Would you like to know what I am capable of?
   - - Hello how are you today?
-    - I'm well thank you, I hope you are too.  Would you like to know what I am capable of?
+    - I'm well thank you, I hope you are too. Would you like to know what I am capable of?
   - - How are you today?
-    - I'm well thank you, I hope you are too.  Would you like to know what I am capable of?
+    - I'm well thank you, I hope you are too. Would you like to know what I am capable of?
+  - - how are you today
+    - I'm well thank you, I hope you are too. Would you like to know what I am capable of?
   - - Hey Nutribot, how's it going you today?
     - I'm well thank you, I hope you are too.  Would you like to know what I am capable of?
   - - Hey Nutribot, how's it going you today?
